--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name='theme-color'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="https://gizapp.github.io/prod/up.png" />
-    <meta property="og:image:secure_url" content="https://gizapp.github.io/prod/up.png" />
+    <meta property="og:image" content="preview.png" />
+    <meta property="og:image:secure_url" content="preview.png" />
     <meta property="og:image:type" content="image/png"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
