--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta name='theme-color'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="https://gizapp.github.io/up/preview.png" />
-    <meta property="og:image:secure_url" content="https://gizapp.github.io/up/preview.png" />
-    <meta property="og:image:type" content="image/png"/>
-    <meta property="og:image:width" content="1200"/>
-    <meta property="og:image:height" content="630"/>
-    <meta property="og:image:alt" content="The main interface of Understandable Passwords" />
-    <meta property="og:description" content="The tool to generate strong and easily memorizable passwords"/>
-    <meta property="og:title" content="Understandable Passwords"/>
+    <meta property="og:type" content="website">
+    <meta property="og:image">
+    <meta property="og:image:width">
+    <meta property="og:image:height">
+    <meta property="og:image:alt">
+    <meta property="og:description">
+    <meta property="og:title">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title">
+    <meta name="twitter:description">
+    <meta name="twitter:image">
     <link rel='stylesheet' href='color.css'>
     <link rel='stylesheet' href='index.css'>
     <link rel='stylesheet' href='tooltip.css'>
@@ -40,6 +43,7 @@
         <div class='shellBuffer result'></div>
       </div>
 
+      <script src='custom.js'></script>
       <script>
         'use strict';
         if (navigator.serviceWorker)
@@ -101,7 +105,6 @@
         }
         const byClass = (parent, name) => parent.getElementsByClassName(name)[0]
       </script>
-      <script src='custom.js'></script>
       <script src='favicon.js'></script>
       <script src='manifest.js'></script>
       <script src='theme.js'></script>
