--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang='en' xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='author' content='quandangv'>
+    <meta name='keywords'>
+    <meta name='description'>
     <meta name='theme-color'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:type" content="website">
-    <meta property="og:image">
-    <meta property="og:image:width">
-    <meta property="og:image:height">
-    <meta property="og:image:alt">
-    <meta property="og:description">
-    <meta property="og:title">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title">
-    <meta name="twitter:description">
-    <meta name="twitter:image">
+    <meta property='og:type' content='website'>
+    <meta property='og:image'>
+    <meta property='og:image:width'>
+    <meta property='og:image:height'>
+    <meta property='og:image:alt'>
+    <meta property='og:description'>
+    <meta property='og:title'>
+    <meta name='twitter:card' content='summary_large_image'>
+    <meta name='twitter:title'>
+    <meta name='twitter:description'>
+    <meta name='twitter:image'>
     <link rel='stylesheet' href='color.css'>
     <link rel='stylesheet' href='index.css'>
     <link rel='stylesheet' href='tooltip.css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Recursive:slnt,wght,CASL,CRSV,MONO@-15..0,300..1000,0..1,0..1,0..1&display=swap'>
-    <link rel="icon">
-    <link rel="manifest">
+    <link rel='icon'>
+    <link rel='manifest'>
+    <title></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
