Move service worker to root

--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -65,7 +65,7 @@ Contact email: gizapp@tutanota.com
       <script>
         'use strict';
         if (navigator.serviceWorker)
-          navigator.serviceWorker.register('../common/sw.js')
+          navigator.serviceWorker.register('../ServiceWorker.js')
 
         function selectElement(elem) {
           const range = document.createRange();
