[UP] improve minifier and the intro

--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -170,6 +170,7 @@ Contact email: gizapp@tutanota.com
           .c{fill:var(--colorBg);stroke:var(--color1);stroke-width:2}
           .i{font-size:113%;stroke:var(--colorBg);stroke-width:9;paint-order:stroke fill}
           .o{font-size:125%}
+          .u{font-weight:500;font-size:65%;baseline-shift:super}
         </style>
         <text class='o' x='24' y='31'>Let's compare passwords to phone numbers</text>
         <rect class='r' width='328' height='244' x='24' y='48'/>
@@ -177,9 +178,9 @@ Contact email: gizapp@tutanota.com
         <text class='d' style='text-anchor:end' y='72' x='325'>How many phone numbers <tspan dy='1.25em' style=';text-anchor:end' x='325'>can you remember?</tspan></text>
         <text class='p' x='70' y='161'>954-818-2138</text>
         <path class='c' d='m61 167c-0.965 0.51-3.361 6.9-1.108 6.54 20.924-3.33 58.228-0.16 77.128-2.45 29.18-3.53 74.69 5 100-1.94 1.16-0.32 1.32-4.43 1.22-5.54m-83.47 6.51-0.61 7.31'/>
-        <text style='font-size:188%;white-space:pre;line-height:1' x='36.541' y='207.26'><tspan><tspan class='f'>log<tspan style='font-size:65%;font-weight:400;baseline-shift:sub;fill:var(--color1)'>2</tspan>10</tspan><tspan style='font-weight:500;font-size:65%;baseline-shift:super'> 10<tspan style='fill-opacity:0.7'> digits</tspan></tspan></tspan><tspan x='36.541' dy='1.4em' style='font-size:80%'><tspan style='font-weight:300;fill:var(--color1)'>≈ </tspan>33<tspan style='font-size:70%;fill-opacity:0.7'> bits of entropy</tspan></tspan></text>
-        <path style='fill:none;stroke:var(--colorFg);stroke-width:1' d='m71.897 244.99c2.4 13.63 19.083 17.28 19.083 17.28'/>
-        <text x='94.694923' y='265.84338'>terrible password strength</text>
+        <text style='font-size:188%;white-space:pre;line-height:1' x='96' y='209'><tspan><tspan class='f'>10</tspan><tspan class='u'> 10<tspan style='fill-opacity:0.7'> digits</tspan></tspan></tspan><tspan x='60' dy='1.4em' style='font-size:80%'><tspan style='font-weight:300;fill:var(--color1)'>≈ </tspan>2<tspan class='u'>33</tspan><tspan style='font-size:80%;fill-opacity:0.7'> possible numbers</tspan></tspan></text>
+        <path style='fill:none;stroke:var(--colorFg);stroke-width:1' d='m105 248c2.4 13.63 19.083 17.28 19.083 17.28'/>
+        <text x='125' y='270'>terrible password strength</text>
         <rect class='r' width='496' height='244' x='376' y='48'/>
         <text x='311.97794' y='257.70517' transform='rotate(-20.162)' style='font-size:175%;fill:var(--color1)'>727-222-5822</text>
         <text x='563.71619' y='-112.9493' transform='rotate(18.524)' style='font-size:138%;fill:var(--color1)'>818-806-4748</text>
@@ -197,13 +198,13 @@ Contact email: gizapp@tutanota.com
         <rect class='r' width='328' height='276' x='24' y='340'/>
         <path style='fill:none;stroke:var(--color1);stroke-width:1.5' d='m321.9 594.86c3.54 0.19 22.22 3.07 23.92 1.41m-6.8-31.74c1.19-1.14-23.67 16.17-20.02 13.19m-7.31-31.61c-3.17 3.93-15.85 18.68-13.91 19.02M284.43 533.5c-2.41 7.65-7.24 16.94-8.79 22.62m-24.2-22.76c-4.03 4.95-4.67 11.66-7.76 17.04m-25.67-15.44c-0.33 6.91-5.86 13.23-5.86 20.07M181.53 531.6c1.33 6.34-1.66 13.71 0.1 19.13m-42.36-18.97c1.68 7.96 0.5 16.51 2.81 21.84m-37.45-21.95c4.13 5.43 4.23 17.93 5.36 22.34M74.244 564.87C70.091 562.63 60.557 546.71 57.032 546.43m2.412 58.34C51.189 601.76 41.79 603.6 34 600.79'/>
         <rect class='c' width='137.95' height='30.389999' x='202.75999' y='348.94'/>
-        <path class='c' d='m317.92 379.33v62.03M230.7 409.72v31.64M102.35 409.72v32.76m160.48-63.15v30.39H115.19v-60.78h87.57v30.39z'/>
+        <path class='c' d='m313 379.33v62.03M200 409.72v31.64M75 409.72v32.76m190-63.15v30.39H115.19v-60.78h87.57v30.39z'/>
         <rect class='c' width='82.174034' height='60.779968' x='33.015968' y='348.94'/>
-        <text class='p'><tspan x='38.867' y='372.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>wheel-globes evicerated</tspan><tspan y='372.15' style='stroke-width:3.77953'></tspan></tspan><tspan x='38.867' y='402.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>UFO&nbsp;&nbsp;&nbsp;&nbsp;-attendants</tspan></tspan></text>
-        <text y='471' x='345' style='font-size:188%;text-anchor:end'><tspan class='f'>log</tspan><tspan style='font-size:65%;baseline-shift:sub;fill:var(--color1)'>2</tspan><tspan>2151</tspan><tspan style='font-weight:600;font-size:65%;baseline-shift:super'>2</tspan><tspan class='f'>×</tspan><tspan>1938</tspan><tspan style='font-weight:600;font-size:65%;baseline-shift:super'>2</tspan><tspan class='f'>×</tspan><tspan>624</tspan></text>
-        <text style='font-size:88%;line-height:0.8;text-anchor:end;white-space:pre;fill-opacity:0.7' x='90.287' y='489.45'><tspan x='92' y='490'><tspan style=';text-anchor:start'>sub-nouns</tspan><tspan style='font-weight:600;font-size:9.08976;baseline-shift:super;text-anchor:start'>count        </tspan><tspan style=';text-anchor:start'>nouns</tspan><tspan style='font-weight:600;font-size:9.08976;baseline-shift:super;text-anchor:start'>count         </tspan><tspan style=';text-anchor:start'>verbs</tspan></tspan></text>
-        <text style='font-size:150%;line-height:1;white-space:pre' x='36.541' y='516'><tspan class='f'>≈ </tspan><tspan>53</tspan><tspan style='font-size:70%;fill-opacity:0.7'> bits of entropy</tspan></text>
-        <text style='font-size:125%;fill:var(--color1)' x='190.39' y='580.2'><tspan x='190.39' y='580.2' style=';text-anchor:middle'>20 more bits = 2<tspan style='font-weight:600;font-size:65%;baseline-shift:super;text-anchor:middle;fill:var(--color1)'>20</tspan></tspan><tspan x='190.39' y='603.53' style='text-anchor:middle'>≈ <tspan style='fill:var(--colorFg)'>1 million times stronger!</tspan></tspan></text>
+        <text class='p'><tspan x='38.867' y='372.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>wheel-globes eviscerated</tspan><tspan y='372.15' style='stroke-width:3.77953'></tspan></tspan><tspan x='38.867' y='402.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>UFO&emsp;&emsp14;-attendants</tspan></tspan></text>
+        <text y='475' x='30' style='font-size:230%'><tspan>2151</tspan><tspan class='u'>2</tspan><tspan class='f'>×</tspan><tspan>1938</tspan><tspan class='u'>2</tspan><tspan class='f'>×</tspan><tspan>624</tspan></text>
+        <text style='line-height:0.8;fill-opacity:0.7' x='30' y='490'>sub-nouns<tspan class='u'>count</tspan>&emsp;&emsp;nouns<tspan class='u'>count</tspan>&emsp;&emsp;&ensp;verbs</text>
+        <text style='font-size:150%;line-height:1;white-space:pre' x='30' y='520'><tspan class='f'>≈ </tspan>2<tspan class='u'>53</tspan><tspan style='font-size:80%;fill-opacity:0.7'> possible passphrases</tspan></text>
+        <text style='font-size:125%;fill:var(--color1);text-anchor:middle' x='190.39' y='580.2'>20 more bits = 2<tspan class='u'>20</tspan></tspan><tspan x='190.39' y='603.53' style='text-anchor:middle'>≈ <tspan style='fill:var(--colorFg)'>1 million times stronger!</tspan></tspan></text>
         <path class='r' d='M708 616H376V340H872V616H726.35'/>
         <path class='c' d='m419.06 472.62c0-46.75 33.09-71.41 74.8-71.41 41.71 0 74.79 24.66 74.79 71.41'/>
         <path class='c' d='m517.8 476.69c1.37-9.78 12.28-22.3 12.28-22.3 0 0 5.96 11.88 6.98 22.3zm13.32-42.09c-1.06 9.96-0.57 11.22-1.04 19.79M516.11 420.5c0 0 0.78 13.52 2.11 15.19 1.74 2.19 13.79 3.45 12.46 5.68-1.79 3.01-16.74 4.38-17.76 2.06-1.54-3.47-6.35-15.08-6.35-15.08m25.59 48.34 0.81 10.95m-9.74-10.95-2.52 10.92m2.82-67.52c-4.82 10.91 7.01 17.85 15.61 12.25 7.41-4.83 3.09-16.56-2.29-17.67-5.09-1.05-11.21 0.66-13.32 5.42z'/>
