[UP] clarify help message

--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -41,7 +41,7 @@ Contact email: gizapp@tutanota.com
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id='root'>
-      <div id='suggestions'> <i class='msg'>for more info</i></div>
+      <div id='suggestions'> <i class='msg'>each button for more info</i></div>
       <div id='shell' class='empty'>
         <span class='prefix' onclick='input.resetSelection()'>
           U<span class='hidden'>nderstandable </span>Pass<span class='hidden'>words</span>&gt;
