--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -31,6 +31,8 @@ Contact email: gizapp@tutanota.com
     <meta name='twitter:title'>
     <meta name='twitter:description'>
     <meta name='twitter:image'>
+    <link rel="preload" href="https://fonts.gstatic.com/s/recursive/v34/8vIK7wMr0mhh-RQChyHuE2Za.woff2" as="font" crossorigin>
+    <link rel="preload" href="https://fonts.gstatic.com/s/recursive/v34/8vIK7wMr0mhh-RQChyHuHWZaC_w.woff2" as="font" crossorigin>
     <link rel='stylesheet' href='color.css'>
     <link rel='stylesheet' href='index.css'>
     <link rel='stylesheet' href='tooltip.css'>
@@ -64,7 +66,7 @@ Contact email: gizapp@tutanota.com
         function addFonts() {
           const link = document.createElement("link")
           link.rel = "stylesheet"
-          link.href = 'https://fonts.googleapis.com/css2?family=Recursive:slnt,wght,CASL,CRSV,MONO@-15..0,300..1000,0..1,0..1,0..1&display=swap'
+          link.href = 'https://fonts.googleapis.com/css2?family=Recursive:slnt,wght,CASL,CRSV,MONO@-15..0,300..1000,0..1,0..1,0..1'
           document.head.appendChild(link)
         }
         if (navigator.serviceWorker) {
