[UP] add static favicon for SEO

--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -34,7 +34,7 @@ Contact email: gizapp@tutanota.com
     <link rel='stylesheet' href='color.css'>
     <link rel='stylesheet' href='index.css'>
     <link rel='stylesheet' href='tooltip.css'>
-    <link rel='icon'>
+    <link rel='icon' href='favicon.svg'>
     <link rel='manifest'>
     <title></title>
   </head>
