--- a/dev/up/index.html
+++ b/dev/up/index.html
@@ -198,7 +198,7 @@ Contact email: gizapp@tutanota.com
         <rect class='c' width='137.95' height='30.389999' x='202.75999' y='348.94'/>
         <path class='c' d='m313 379.33v62.03M200 409.72v31.64M75 409.72v32.76m190-63.15v30.39H115.19v-60.78h87.57v30.39z'/>
         <rect class='c' width='82.174034' height='60.779968' x='33.015968' y='348.94'/>
-        <text class='p'><tspan x='38.867' y='372.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>wheel-globes eviscerated</tspan><tspan y='372.15' style='stroke-width:3.77953'></tspan></tspan><tspan x='38.867' y='402.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>UFO&emsp;&emsp14;-attendants</tspan></tspan></text>
+        <text class='p'><tspan x='38.867' y='372.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>wheel-globes eviscerate</tspan><tspan y='372.15' style='stroke-width:3.77953'></tspan></tspan><tspan x='38.867' y='402.15' style='stroke-width:3.77953'><tspan style=';text-anchor:start;stroke-width:3.77953'>UFO&emsp;&emsp14;-attendants</tspan></tspan></text>
         <text y='475' x='30' style='font-size:230%'><tspan>2151</tspan><tspan class='u'>2</tspan><tspan class='f'>×</tspan><tspan>1938</tspan><tspan class='u'>2</tspan><tspan class='f'>×</tspan><tspan>624</tspan></text>
         <text style='line-height:0.8;fill-opacity:0.7' x='30' y='490'>sub-nouns<tspan class='u'>count</tspan>&emsp;&emsp;nouns<tspan class='u'>count</tspan>&emsp;&emsp;&ensp;verbs</text>
         <text style='font-size:150%;line-height:1;white-space:pre' x='30' y='520'><tspan class='f'>≈ </tspan>2<tspan class='u'>53</tspan><tspan style='font-size:80%;fill-opacity:0.7'> possible passphrases</tspan></text>
